8226468: [aix] loadquery failed error message displayed

Reviewed-by: stuefe, mbaesken